[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/characters/player/arrow.png" type="Texture" id=1]
[ext_resource path="res://scripts/Javelin.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.22696, 5.05918 )

[sub_resource type="CircleShape2D" id=2]
radius = 250.0

[node name="Javelin" type="KinematicBody2D" groups=[
"javelin",
]]
scale = Vector2( 1.2, 1.2 )
z_index = 2
collision_layer = 2
collision_mask = 628
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1.06066 )
rotation = 1.5708
scale = Vector2( 0.08, 0.04 )
z_index = 6
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 14.1786, -0.0157886 )
shape = SubResource( 1 )

[node name="Sound" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sound"]
position = Vector2( 13.012, -0.18729 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="Sound" to="." method="_on_Sound_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
